# iu9-compilers-coursework

calculator/: CMakeLists.txt  Makefile  main.cpp
calculator/example/: program.txt
calculator/include/lexer/: compiler.h  fragment.h  message.h  position.h  scanner.h  token.h
calculator/include/parser/: node.h  parser.h  symbol.h  table.h
calculator/include/semantics/: interpret.h
calculator/output/: tree.txt
calculator/src/lexer/: compiler.cpp  position.cpp  scanner.cpp
calculator/src/parser/: parser.cpp
calculator/src/semantics/: interpret.cpp
generator/: CMakeLists.txt  Makefile  main.cpp
generator/example/: program.txt  self_program.txt
generator/include/lexer/: compiler.h  fragment.h  message.h  position.h  scanner.h  token.h
generator/include/parser/: node.h  parser.h  symbol.h  table.h
generator/include/semantics/: ast.h  lr0_automaton.h  table_generator.h
generator/output/: automaton.txt  self_automaton.txt  self_tree.txt  tree.txt
generator/specs/: abstract_grammar.txt  concrete_grammar.txt  concrete_grammar_LL(1).txt  first.txt  follow.txt  lexical_structure.txt  self_grammar.txt
generator/src/lexer/: compiler.cpp  position.cpp  scanner.cpp
generator/src/parser/: node.cpp  parser.cpp  table_calc.cpp  table_gen.cpp
generator/src/semantics/: ast.cpp  lr0_automaton.cpp  table_generator.cpp
